--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -1,7 +1,7 @@
 /* pages/login/login.wxss */
 .mainbox{
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
 }
 .top-box{
   display: flex;
