--- a/pages/print/print.wxml
+++ b/pages/print/print.wxml
@@ -1,43 +1,52 @@
-<form bindsubmit="formSubmit" bindreset="formReset">
-  <view class="section">
-    <picker name='size' bindchange="bindPickerChange" value="{{element}}" range="{{array}}">
-      <view class="picker">
-        页面大小：{{array[index]}}
+<form bindsubmit="formSubmit" bindreset="formReset" >
+  <view class="main">
+    <view class="one">
+      <picker name='size' bindchange="bindPickerChange" value="{{element}}" range="{{array}}">
+        <view class="one">
+          页面大小：{{array[index]}}
+        </view>
+      </picker>
+    </view>
+
+    <view class="section section_gap row">
+      <view class="section__title one">打印方式：</view>
+      <radio-group name="printStyle">
+        <label>
+          <radio value="单面" />单面</label>
+        <label>
+          <radio value="双面" />双面</label>
+        <label>
+          <radio value="其他" />其他</label>
+      </radio-group>
+    </view>
+    <view class="section section_gap row one">
+      <view class="section__title">黑白彩色：</view>
+      <radio-group name="printColor">
+        <label>
+          <radio value="黑白" />黑白</label>
+        <label>
+          <radio value="彩色" />彩色</label>
+        <label>
+          <radio value="其他" />其他</label>
+      </radio-group>
+    </view>
+    <view class="one">
+      <button type="primary" size="mini" bindtap="selectFile">选择文件</button>
+      <span>{{file.name==''?'请选择文件':file.name}}</span>
+    </view>
+    <view class="section one">
+      备注：
+      <view class="note">
+
+        <textarea name="note" bindblur="bindTextAreaBlur" placeholder="请补充打印信息" />
       </view>
-    </picker>
-  </view>
+    </view>
 
-  <view class="section section_gap row">
-    <view class="section__title">打印方式：</view>
-    <radio-group name="printStyle">
-      <label>
-        <radio value="单面" />单面</label>
-      <label>
-        <radio value="双面" />双面</label>
-      <label>
-        <radio value="其他" />其他</label>
-    </radio-group>
-  </view>
-  <view class="section section_gap row">
-    <view class="section__title">黑白彩色：</view>
-    <radio-group name="printColor">
-      <label>
-        <radio value="黑白" />黑白</label>
-      <label>
-        <radio value="彩色" />彩色</label>
-      <label>
-        <radio value="其他" />其他</label>
-    </radio-group>
-  </view>
-  <view class="section">
-    备注：
-    <textarea name="note" bindblur="bindTextAreaBlur" auto-height placeholder="请补充打印信息" />
-  </view>
-
-
-  <!-- 提交按钮与重置按钮 -->
-  <view class="btn-area">
-    <button formType="submit">Submit</button>
-    <button formType="reset">Reset</button>
+    <!-- 提交按钮与重置按钮 -->
+    <view class="btn-area one">
+      <button formType="submit">提交</button>
+      <view class="one"></view>
+      <button formType="reset">重置</button>
+    </view>
   </view>
 </form>
