--- a/pages/print/print.wxss
+++ b/pages/print/print.wxss
@@ -2,3 +2,19 @@
   display: flex;
   flex-direction: row;
 }
+.note{
+  margin-top: 20rpx;
+  border: 2rpx solid #eee;
+  border-radius:20rpx;
+  margin-left: 20rpx;
+  margin-right: 30rpx;
+  padding: 20rpx;
+  
+}
+.main{
+  margin-left: 30rpx;
+  margin-right: 30rpx;
+}
+.one{
+  margin-top: 20rpx;
+}
